--- a/index.html
+++ b/index.html
@@ -600,7 +600,7 @@
 <a class="menu-item" href="https://urlaubskalender.github.io/Einkaufsliste/">
 <i class="fas fa-shopping-cart"></i> Zur Einkaufsliste
       </a>
-<a class="menu-item" href="https://urlaubskalender.github.io/Elite" target="_blank">
+<a class="menu-item" href="https://urlaubskalender.github.io/Elite/">
 <i class="fas fa-search"></i> Zur Urlaubskalender
       </a>
 <hr/>
